Bug 6040 - fr_FR is not correct for abmon, adday, d_fmt and grouping
Summary: fr_FR is not correct for abmon, adday, d_fmt and grouping
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: localedata (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: GNU C Library Locale Maintainers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-05 20:34 UTC by Stéphane Raimbault
Modified: 2014-07-03 11:39 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments
fr_FR patch (1.29 KB, patch)
2008-04-05 20:40 UTC, Stéphane Raimbault
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Raimbault 2008-04-05 20:34:59 UTC
I have spotted some mistakes in the fr_FR file of the glibc so we have
talked about that problem[1] on traduc.org[2] mailing list.

The use of 'avril' isn't conventional to abbreviate 'avril' but we've
chosen to use it because the full word has only 5 characters length and
the usual abbreviation has 4.

We have fixed the following translations:

1 - abmon:
jan -> janv.
fév -> févr.
mar -> mars
avr -> avril
mai -> mai
jui -> juin
jul -> juil.
aoû -> août
sep -> sept.
oct -> oct.
nov -> nov.
déc -> déc.

2 - adday:
dim -> dim.
lun -> lun.
mar -> mar.
mer -> mer.
jeu -> jeu.
ven -> ven.
sam -> sam.

References:
- article 'Typographie : date, heure, adresse, téléphone, mail' of
Jacques Poitou, of the university Lumière Lyon-2, indicate the same
abreviations of months (except the one for 'avril' ('avr.'))

- 'Ramat de la Typographie' (2002, ISBN2-922366-01-4) use the same
abbreviations except for 'avril' => 'avr.' and 'juillet' => 'juill.'.

- The 'Office québécois' of the french language advocates 'juill.'
instead of 'juil.'
http://66.46.185.79/bdl/gabarit_bdl.asp?Th=2&t1=&id=3619&D=Abr%E9viations%20des%20noms%20de%20mois
http://66.46.185.79/bdl/gabarit_bdl.asp?Th=2&t1=&id=3617&D=Abr%E9viations%20des%20noms%20de%20jours

- Wikipedia (http://fr.wikipedia.org/wiki/Mois) advocates 'juil.' or
'juill' for 'juillet'.

- the article DATE of posthumous document « Orthotypographie, dictionnaire
raisonné » of Jean-Pierre Lacroux advocates the same abbreviations :
http://listetypo.free.fr/JPL/Orthotypo-Lacroux.pdf

3 - d_fmt: in French, the separator is not a dot but a slash!

References:
- Wikipedia: http://fr.wikipedia.org/wiki/Dates
- The article « Typographie : date, heure, adresse, téléphone, mail » of
Jacques Poitou : http://perso.univ-lyon2.fr/~poitou/Typo/t05a.html

4 - the document n972-14652ft.pdf explains the meaning of grouping in
LC_NUMERIC and I in French we must use 'grouping 3' and not the
useless current 'grouping 0;0' (tested with printf("%'d", 2000000) =>
2 000 000).

References :
- « Tout sur les unités de mesure » of Thierry Thomasset, Université
technologique of Compiègne :
http://www.utc.fr/~tthomass/Themes/Unites/typographie/Typo.pdf
- lesson of maths for physics and chemistry of the 'Université en
ligne' :
http://www.uel.education.fr/consultation/reference/physique/outils_nancy/apprendre/chapitre1/titre5res.htm

Regards,
Stéphane

PS : I already posted this message on libc-locales@sourceware.org,
http://sourceware.org/ml/libc-locales/2008-q1/msg00035.html

[1] http://www.traduc.org/pipermail/traduc/2008-January/005362.html
[2] http://traduc.org, french translation of Open Source projects
(glossary, tools, desktop, man-pages, howto, etc).
Comment 1 Stéphane Raimbault 2008-04-05 20:40:35 UTC
Created attachment 2355 [details]
fr_FR patch
Comment 2 Ulrich Drepper 2008-04-08 00:18:27 UTC
I've made the changes.  But I expect that you'll be defending them in case
somebody complains.