[BZ #6040]

* locales/fr_FR: Fix abmon, abday, d_ftm, grouping.